Document PPDG/src/objects/XML_Message_Tag__c.object
<CustomObject>
    <fields>
        <fullName>Data_Type__c</fullName>
        <label>Data Type</label>
        <picklist>
            <picklistValues>
                <fullName>String</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Double</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Tag__c</fullName>
        <formula>&quot;&lt;/&quot; &amp; Name &amp; &quot;&gt;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Tag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Label__c</fullName>
        <label>Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_Order__c</fullName>
        <label>Order In Message</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Tag__c</fullName>
        <formula>&quot;&lt;&quot; &amp; Name &amp; &quot;&gt;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Tag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XML_Message__c</fullName>
        <label>XML Message</label>
        <referenceTo>XML_Message__c</referenceTo>
        <relationshipLabel>XML Message Tags</relationshipLabel>
        <relationshipName>XML_Message_Tags</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>XML Message Tag</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>XML Message Tag Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XML Message Tags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>